--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,43 +1,14 @@
-@import "variables";
+@import 'variables';
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
 
   background-color: $primary;
-  height: 3rem;
-
-  ul {
-    width: 70%;
-    display: flex;
-    list-style: none;
-    align-self: flex-end;
-    justify-content: space-around;
-    padding: 0;
-    margin: 0;
-    height: 100%;
-
-    li {
-      flex: 1;
-      width: 30%;
-      text-align: center;
-      margin: 0;
-      align-self: center;
-      height: 100%;
-
-      a {
-        text-decoration: none;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: $textWhite;
-      }
-      &:hover {
-        background-color: $secondary;
-      }
-    }
+  @media (min-width: 450px) {
+    height: 3rem;
   }
+
   svg {
     width: 1rem;
     height: 1rem;
