--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -2,6 +2,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
+  @media (min-width: 450px) {
+  }
 }
 
 .layoutChildrenSection {
