--- a/styles/HeaderContent.module.scss
+++ b/styles/HeaderContent.module.scss
@@ -8,6 +8,9 @@
   padding: 0;
   margin: 0;
   height: 100%;
+  @media (min-width: 760px) {
+    display: flex;
+  }
 
   li {
     flex: 1;
@@ -31,10 +34,7 @@
   }
 }
 .headerMobile {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 70%;
+  width: 100%;
   background-color: red;
   display: block;
   list-style: none;
