--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -3,17 +3,28 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-
+  padding: 0.5rem;
   background-color: $primary;
   @media (min-width: 450px) {
     height: 3rem;
+  }
+  .langSwitcher {
+    a {
+      width: 3rem;
+      height: 3 rem;
+      border-radius: 50%;
+      border: 2px solid white;
+    }
+    @media (min-width: 450px) {
+      display: none;
+    }
   }
 
   svg {
     width: 1rem;
     height: 1rem;
 
-    @media (min-width: 768px) {
+    @media (min-width: 450px) {
       display: none;
     }
   }
