--- a/styles/HeaderContent.module.scss
+++ b/styles/HeaderContent.module.scss
@@ -32,6 +32,15 @@
       background-color: $secondary;
     }
   }
+  .langSwitcher {
+    display: flex;
+    a {
+      width: 3rem;
+      height: 3 rem;
+      border-radius: 50%;
+      border: 2px solid white;
+    }
+  }
 }
 .headerMobile {
   width: 100%;
@@ -42,6 +51,10 @@
   margin: 0;
   height: 100%;
   z-index: 100;
+
+  @media (min-width: 450px) {
+    display: none;
+  }
   li {
     text-align: center;
     padding: 1rem;
@@ -66,5 +79,8 @@
     &:hover {
       background-color: $secondary;
     }
+  }
+  .langSwitcher {
+    display: none;
   }
 }
