--- a/styles/HeaderContent.module.scss
+++ b/styles/HeaderContent.module.scss
@@ -34,12 +34,18 @@
   }
   .langSwitcher {
     display: flex;
-    a {
-      width: 3rem;
-      height: 3 rem;
-      border-radius: 50%;
-      border: 2px solid white;
+    align-items: center;
+    .btnContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-self: center;
+      flex-grow: 1;
     }
+  }
+  svg {
+    width: 1rem;
+    height: 1rem;
   }
 }
 .headerMobile {
@@ -52,7 +58,7 @@
   height: 100%;
   z-index: 100;
 
-  @media (min-width: 450px) {
+  @media (min-width: 760px) {
     display: none;
   }
   li {
