--- a/styles/LangButton.module.scss
+++ b/styles/LangButton.module.scss
@@ -6,7 +6,7 @@
   color: $textWhite;
   text-decoration: none;
   width: 1.5rem;
-  height: 1rem;
   background-color: $primary;
+  color: $textWhite;
   color: $textWhite;
 }
