--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -5,26 +5,39 @@
   align-items: center;
   padding: 0.5rem;
   background-color: $primary;
-  @media (min-width: 450px) {
+  @media (min-width: 760px) {
     height: 3rem;
   }
   .langSwitcher {
-    a {
-      width: 3rem;
-      height: 3 rem;
-      border-radius: 50%;
-      border: 2px solid white;
+    display: flex;
+    align-items: center;
+    .btnContainer {
+      display: flex;
+      justify-content: center;
     }
-    @media (min-width: 450px) {
+    @media (min-width: 760px) {
       display: none;
     }
   }
+  .shoppingBasket {
+    margin: 0 1rem;
+    display: flex;
+    align-items: center;
+    svg {
+      width: 1rem;
+      height: 1rem;
+    }
+  }
+  .burgerMenu {
+    display: flex;
+    align-items: center;
 
-  svg {
-    width: 1rem;
-    height: 1rem;
+    svg {
+      width: 1rem;
+      height: 1rem;
+    }
 
-    @media (min-width: 450px) {
+    @media (min-width: 760px) {
       display: none;
     }
   }
