--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -8,7 +8,12 @@
 }
 
 .layoutChildrenSection {
-  height: 100%;
-  width: 70%;
+  min-height: calc(100vh - 14rem);
+  width: 100%;
+  padding: 1rem;
   margin: auto;
+  @media (min-width: 450px) {
+    min-height: calc(100vh - 10rem);
+    width: 70%;
+  }
 }
