--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,8 +1,9 @@
 .layoutSection {
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow-x: hidden;
   @media (min-width: 450px) {
   }
 }
