--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,12 +1,28 @@
 @import 'variables';
 .header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
   background-color: $primary;
   @media (min-width: 760px) {
     height: 3rem;
+  }
+  .logo {
+    width: 2rem;
+    height: 2rem;
+  }
+  .navigation {
+    display: flex;
+    width: 100%;
+
+    justify-content: flex-end;
+    .navigationContent {
+      justify-content: flex-end;
+      display: flex;
+      align-items: center;
+      width: 100%;
+    }
   }
   .langSwitcher {
     display: flex;
@@ -23,9 +39,13 @@
     margin: 0 1rem;
     display: flex;
     align-items: center;
-    svg {
-      width: 1rem;
-      height: 1rem;
+    a {
+      display: flex;
+      align-items: center;
+      svg {
+        width: 1rem;
+        height: 1rem;
+      }
     }
   }
   .burgerMenu {
