--- a/styles/HeaderContent.module.scss
+++ b/styles/HeaderContent.module.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 .headerDesktop {
   width: 70%;
+
   display: none;
   list-style: none;
   align-self: flex-end;
@@ -14,11 +15,17 @@
 
   li {
     flex: 1;
-    width: 30%;
+    //width: 30%;
     text-align: center;
     margin: 0;
     align-self: center;
     height: 100%;
+    @media (min-width: 760px) {
+      width: 100%;
+      &:nth-last-of-type(1) {
+        flex: 0;
+      }
+    }
 
     a {
       text-decoration: none;
