Some styles added

--- a/styles/Quiz.module.scss
+++ b/styles/Quiz.module.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 .question {
-  color: aliceblue;
-  background-color: chocolate;
+  text-align: center;
+  color: $textWhite;
+  background-color: $secondary;
 }
