--- a/styles/QuizNavBar.module.scss
+++ b/styles/QuizNavBar.module.scss
@@ -4,4 +4,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: mediumslateblue;
+  button {
+    background-color: mediumslateblue;
+  }
 }
