--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -7,59 +7,60 @@
     height: 100%;
     width: 100%;
   }
-}
 
-.slick-arrow {
-  cursor: pointer;
-  height: 120px;
-  width: 80px;
-  position: relative;
-  margin: 20px;
-  color: gray;
-}
+  .slick-arrow {
+    cursor: pointer;
+    height: 120px;
+    width: 80px;
+    position: relative;
+    margin: 20px;
+    color: gray;
+    background-color: #000;
+  }
 
-.slick-arrow slick-prev,
-.slick-arrow slick-next {
-  background: #337ab7;
-  height: 10px;
-  left: -30px;
-  position: absolute;
-  top: 60px;
-  width: 100px;
-}
+  .slick-arrow slick-prev,
+  .slick-arrow slick-next {
+    background-color: #337ab7;
+    height: 10px;
+    left: -30px;
+    position: absolute;
+    top: 60px;
+    width: 100px;
+  }
 
-.arrow-2-top {
-  transform: rotate(45deg);
-  transform-origin: bottom right;
-}
-.arrow-2-bottom {
-  transform: rotate(-45deg);
-  transform-origin: top right;
-}
-.arrow-2-top::after,
-.arrow-2-bottom::after {
-  background: #000;
-  content: '';
-  height: 100%;
-  position: absolute;
-  top: 0;
-  transition: all 0.15s;
-}
-.arrow-2-top::after {
-  left: 100%;
-  right: 0;
-  transition-delay: 0s;
-}
-.arrow-2-bottom::after {
-  left: 0;
-  right: 100%;
-  transition-delay: 0.15s;
-}
-.arrow-2:hover .arrow-2-top::after {
-  left: 0;
-  transition-delay: 0.15s;
-}
-.arrow-2:hover .arrow-2-bottom::after {
-  right: 0;
-  transition-delay: 0s;
+  .arrow-2-top {
+    transform: rotate(45deg);
+    transform-origin: bottom right;
+  }
+  .arrow-2-bottom {
+    transform: rotate(-45deg);
+    transform-origin: top right;
+  }
+  .arrow-2-top::after,
+  .arrow-2-bottom::after {
+    background: #000;
+    content: '';
+    height: 100%;
+    position: absolute;
+    top: 0;
+    transition: all 0.15s;
+  }
+  .arrow-2-top::after {
+    left: 100%;
+    right: 0;
+    transition-delay: 0s;
+  }
+  .arrow-2-bottom::after {
+    left: 0;
+    right: 100%;
+    transition-delay: 0.15s;
+  }
+  .arrow-2:hover .arrow-2-top::after {
+    left: 0;
+    transition-delay: 0.15s;
+  }
+  .arrow-2:hover .arrow-2-bottom::after {
+    right: 0;
+    transition-delay: 0s;
+  }
 }
