--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -39,7 +39,8 @@
     margin: 0 1rem;
     display: flex;
     align-items: center;
-    a {
+    color: white;
+    div {
       display: flex;
       align-items: center;
       svg {
