--- a/styles/Quiz.module.scss
+++ b/styles/Quiz.module.scss
@@ -4,3 +4,13 @@
   color: $textWhite;
   background-color: $secondary;
 }
+.invitation {
+  text-align: center;
+  padding: 0 5px 0 5px;
+}
+.result {
+  :global(.ant-result-subtitle) {
+    font-size: 20px;
+    color: darkblue;
+  }
+}
