--- a/styles/QuizForm.module.scss
+++ b/styles/QuizForm.module.scss
@@ -1,7 +1,10 @@
 @import 'variables';
-
+.quest {
+  text-align: center;
+}
 .form {
   background-color: aquamarine;
+
   padding: 5px;
   height: 100%;
   flex-grow: 1;
