--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -13,6 +13,11 @@
   width: 100%;
   padding: 1rem;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  // text-align: center;
+
   @media (min-width: 450px) {
     min-height: calc(100vh - 10rem);
     width: 70%;
