--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,7 @@
-$primary: #0C0922;
-$secondary: #36324F;
-$textWhite:white;
+$primary: #0c0922;
+$secondary: rgb(79, 71, 122);
+$textWhite: white;
 $textBlack: #333;
+$fontHeader: 'Rubik', sans-serif;
+$fontText: 'Montserrat', sans-serif;
+$backgroundColor: rgb(247, 238, 248);
