--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -4,9 +4,28 @@
   align-items: center;
   background-color: $primary;
   padding: 0.5rem 0;
+  position: relative;
   @media (min-width: 450px) {
     display: flex;
   }
+
+  :global(.ant-modal-root) {
+    height: 100%;
+  }
+
+  :global(.ant-modal-wrap) {
+    top: unset;
+    bottom: 1rem;
+    position: absolute;
+    overflow: hidden;
+  }
+
+  :global(.ant-modal) {
+    top: unset;
+    margin-right: 0;
+    margin-left: 0;
+  }
+
   ul {
     padding: 0;
   }
