--- a/styles/LandingPageAboutUs.module.scss
+++ b/styles/LandingPageAboutUs.module.scss
@@ -1,11 +1,26 @@
+@import 'variables';
+
 .landingAboutUsContainer {
   display: flex;
   flex-direction: column;
+  background-size: contain;
+  background-image: url(../public/assets/naftee_holder-01.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 25vh;
+
   @media (min-width: 460px) {
     flex-direction: row;
   }
-  img {
-    width: auto;
-    height: 10rem;
+
+  p {
+    font-size: 1.2rem;
+    line-height: 1.2;
+    text-align: center;
+    color: $textWhite;
+    font-family: $fontHeader;
   }
 }
