--- a/styles/ExpandableText.module.scss
+++ b/styles/ExpandableText.module.scss
@@ -2,9 +2,25 @@
   div {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    background-color: aqua;
     svg {
       width: 1rem;
       height: 1rem;
+    }
+  }
+  p {
+    ul {
+      padding: 0;
+      li {
+        ul {
+          padding-left: 1rem;
+
+          li {
+            list-style: circle;
+          }
+        }
+      }
     }
   }
 }
