--- a/styles/QuizForm.module.scss
+++ b/styles/QuizForm.module.scss
@@ -11,7 +11,7 @@
   text-align: left;
   display: flex;
   flex-direction: column;
-  :global(.ant-tooltip, .ant-tooltip-placement-bottom) {
+  :global(.ant-popover, .ant-popover-placement-bottom) {
     left: unset;
 
     right: -5rem;
