--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -7,7 +7,7 @@
   @media (min-width: 450px) {
   }
   :global(.snipcart-cart__content) {
-    background-color: violet;
+    background-color: white;
   }
 }
 
