--- a/styles/ProductOverView.module.scss
+++ b/styles/ProductOverView.module.scss
@@ -3,8 +3,8 @@
 .productOverView {
   padding: 0.5rem;
   img {
-    width: 20%;
-    text-align: center;
+    width: 10rem;
+    height: auto;
   }
   p {
     text-align: center;
