--- a/styles/Quiz.module.scss
+++ b/styles/Quiz.module.scss
@@ -1,8 +1,7 @@
 @import 'variables';
 .question {
   text-align: center;
-  color: $textWhite;
-  background-color: $secondary;
+  color: $textBlack;
 }
 .invitation {
   text-align: center;
