--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,4 +4,5 @@ $textWhite: white;
 $textBlack: #333;
 $fontHeader: 'Rubik', sans-serif;
 $fontText: 'Montserrat', sans-serif;
-$backgroundColor: rgb(247, 238, 248);
+$backgroundColor: #fffffa;
+$borderLight: #d2cfe2;
