--- a/styles/ProductOverView.module.scss
+++ b/styles/ProductOverView.module.scss
@@ -2,9 +2,15 @@
 
 .productOverView {
   padding: 0.5rem;
+  .productImg {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   img {
-    width: 20%;
-    text-align: center;
+    width: 10rem;
+    height: auto;
   }
   p {
     text-align: center;
