--- a/styles/QuizForm.module.scss
+++ b/styles/QuizForm.module.scss
@@ -3,17 +3,42 @@
   text-align: center;
 }
 .form {
-  background-color: aquamarine;
-
   padding: 5px;
   height: 100%;
   flex-grow: 1;
   text-align: left;
   display: flex;
   flex-direction: column;
-  :global(.ant-popover, .ant-popover-placement-bottom) {
-    left: unset;
+  .radioWrapper {
+    margin: 2rem;
+  }
+  :global(.ant-popover) {
+    width: 50%;
+  }
+  :global(.ant-radio-inner, .ant-radio:hover) {
+    border-color: $borderLight;
+  }
 
-    right: -5rem;
+  :global(.ant-btn) {
+    background-color: $borderLight;
+    border: $borderLight;
+    color: $textBlack;
+  }
+  :global(.ant-radio-inner::after) {
+    background-color: $borderLight;
+    border-color: $borderLight;
+  }
+  :global(.ant-radio-input:focus) {
+    background-color: $borderLight;
+    border-color: $borderLight;
+  }
+  :global(.ant-radio-wrapper:hover) {
+    border-color: $borderLight;
+  }
+  :global(.ant-radio-checked, ) {
+    border-color: $borderLight;
   }
 }
+// :global(.ant-radio:hover .ant-radio-input:focus, .ant-radio-inner) {
+//   border-color: $borderLight;
+// }
