--- a/styles/QuizNavBar.module.scss
+++ b/styles/QuizNavBar.module.scss
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: mediumslateblue;
+  background-color: $borderLight;
   button {
-    background-color: mediumslateblue;
+    background-color: $borderLight;
   }
 }
