--- a/styles/LangButton.module.scss
+++ b/styles/LangButton.module.scss
@@ -2,11 +2,9 @@
 
 .langBtn {
   border: none;
-  background-color: $primary;
+  background-color: transparent;
   color: $textWhite;
   text-decoration: none;
   width: 1.5rem;
-  background-color: $primary;
-  color: $textWhite;
-  color: $textWhite;
+
 }
