--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -22,7 +22,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 0;
+  margin: 0 auto;
   h1,
   h3 {
     font-family: $fontHeader;
@@ -32,6 +32,5 @@
   @media (min-width: 450px) {
     min-height: calc(100vh - 10rem);
     width: 70%;
-    margin: auto;
   }
 }
