--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -25,8 +25,7 @@
   :global(.ant-modal) {
     top: unset;
     padding: 0;
-    margin-right: 0;
-    margin-left: 0;
+    max-width: unset;
   }
 
   ul {
