--- a/styles/HeaderContent.module.scss
+++ b/styles/HeaderContent.module.scss
@@ -42,6 +42,8 @@
   .langSwitcher {
     display: flex;
     align-items: center;
+    color: $textWhite;
+
     .btnContainer {
       display: flex;
       justify-content: center;
@@ -50,6 +52,7 @@
 }
 .headerMobile {
   width: 100%;
+
   background-color: red;
   display: block;
   list-style: none;
