--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -36,6 +36,10 @@
         bottom: 70px;
         width: 80px;
         position: absolute;
+        right:10px;
+      }
+      @media (min-width: 760px) {
+        width: 60px;
       }
     }
   }
