--- a/styles/Faq.module.scss
+++ b/styles/Faq.module.scss
@@ -1,3 +1,10 @@
+@import 'variables';
+.faqContainer {
+  @media (min-width: 450px) {
+    width: 70%;
+  }
+}
+
 .list {
   padding-left: 0;
   li {
