--- a/styles/HeaderContent.module.scss
+++ b/styles/HeaderContent.module.scss
@@ -52,8 +52,7 @@
 }
 .headerMobile {
   width: 100%;
-
-  background-color: red;
+  background-color: $secondary;
   display: block;
   list-style: none;
   padding: 0;
@@ -61,6 +60,8 @@
   height: 100%;
   z-index: 100;
   font-family: $fontHeader;
+  font-size: 35px;
+  line-height: 1;
   @media (min-width: 760px) {
     display: none;
   }
