--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -10,6 +10,7 @@
     height: 100%;
     width: 100%;
   }
+
   :global(.slick-arrow) {
     cursor: pointer;
 
@@ -36,11 +37,15 @@
         bottom: 70px;
         width: 80px;
         position: absolute;
-        right:10px;
+        right: 10px;
       }
       @media (min-width: 760px) {
         width: 60px;
       }
     }
+  }
+
+  @media (min-width: 450px) {
+    width: 70%;
   }
 }
