--- a/styles/LandingPageAboutUs.module.scss
+++ b/styles/LandingPageAboutUs.module.scss
@@ -4,10 +4,9 @@
   display: flex;
   flex-direction: column;
   background-size: cover;
-  background-image: url(../public/assets/naftee_holder-01.png);
+  background-image: url(../public/assets/naftee_holder-04.png);
   background-repeat: no-repeat;
-  background-position: top
-;
+  background-position: top;
   padding: 0;
   margin: 0;
   width: 100%;
@@ -18,10 +17,11 @@
   }
 
   p {
-    font-size: 1.2rem;
     line-height: 1.2;
     text-align: center;
+    line-height: 86px;
     color: $textWhite;
     font-family: $fontHeader;
+    font-size: 35px;
   }
 }
