--- a/styles/Quiz.module.scss
+++ b/styles/Quiz.module.scss
@@ -1,4 +1,11 @@
 @import 'variables';
+
+.quizContainer {
+  @media (min-width: 450px) {
+    width: 70%;
+  }
+}
+
 .question {
   text-align: center;
   color: $textBlack;
