--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -4,7 +4,9 @@
   position: relative;
 
   @media (min-width: 760px) {
+    margin: 0 auto;
     display: flex;
+    width: 70%;
   }
   > div {
     height: 100%;
