--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -34,12 +34,19 @@
       &::before {
         color: black;
         font-size: 50px;
-        transform: rotate(0deg);
+
         -webkit-transform: rotate(0deg);
-        bottom: 70px;
         width: 80px;
         position: absolute;
         right: 10px;
+        top: 20px;
+        right: 0;
+        bottom: 0;
+        width: 100px;
+        cursor: pointer;
+        align-items: center;
+        transform: translate3d(-50%, -50%, 0px);
+        line-height: 1;
       }
       @media (min-width: 760px) {
         width: 60px;
