--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -55,14 +55,12 @@
         border-radius: 50%;
         width: 33px;
         height: 33px;
+        color: black;
+        font-size: 50px;
       }
       @media (min-width: 760px) {
         width: 60px;
       }
     }
-  }
-
-  @media (min-width: 450px) {
-    width: 70%;
   }
 }
