--- a/styles/ProductDetail.module.scss
+++ b/styles/ProductDetail.module.scss
@@ -1,3 +1,31 @@
-.selectWrapper {
-  position: relative;
+@import 'variables';
+.productDetail {
+  .topSection {
+    margin-bottom: 15px;
+    img {
+      width: 50rem;
+    }
+    h1 {
+      font-size: xx-large;
+    }
+    text-align: center;
+  }
+  .selectWrapper {
+    position: relative;
+  }
+
+  .price {
+    font-weight: 900;
+    font-size: xx-large;
+  }
+  .snipcartAddItem {
+    button {
+      margin-top: 15px;
+      border: 1px solid $secondary;
+      &:hover {
+        background-color: $secondary;
+        color: $textWhite;
+      }
+    }
+  }
 }
