--- a/styles/LandingPageAboutUs.module.scss
+++ b/styles/LandingPageAboutUs.module.scss
@@ -11,7 +11,7 @@
   margin: 0;
   width: 100%;
   height: 25vh;
-
+  position: relative;
   @media (min-width: 460px) {
     //flex-direction: row;
   }
@@ -23,5 +23,8 @@
     color: $textWhite;
     font-family: $fontHeader;
     font-size: 35px;
+    position: absolute;
+    top: 30%;
+    right: 50%;
   }
 }
