--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -4,6 +4,8 @@
   justify-content: space-between;
   align-items: center;
   background-color: $primary;
+  position: sticky;
+  top: 0;
   @media (min-width: 760px) {
     height: 3rem;
   }
