--- a/styles/ProductDetail.module.scss
+++ b/styles/ProductDetail.module.scss
@@ -13,7 +13,9 @@
   .selectWrapper {
     position: relative;
   }
-
+  .bottomSection {
+    margin-top: 15px;
+  }
   .price {
     font-weight: 900;
     font-size: xx-large;
