--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,6 +1,9 @@
 @import 'variables';
 .header {
+  position: fixed;
   display: flex;
+  width: 100%;
+  z-index: 1000;
   justify-content: space-between;
   align-items: center;
   background-color: $primary;
@@ -25,14 +28,13 @@
       align-items: center;
       width: 100%;
       height: 100%;
-
     }
   }
   .langSwitcher {
     display: flex;
     align-items: center;
     height: 100%;
-color: $textWhite;
+    color: $textWhite;
     .btnContainer {
       display: flex;
       justify-content: center;
