--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,5 +4,5 @@ $textWhite: white;
 $textBlack: #333;
 $fontHeader: 'Rubik', sans-serif;
 $fontText: 'Montserrat', sans-serif;
-$backgroundColor: #ffffff;
+$backgroundColor: rgb(79, 71, 122);
 $borderLight: #d2cfe2;
