--- a/styles/LandingPageAboutUs.module.scss
+++ b/styles/LandingPageAboutUs.module.scss
@@ -12,16 +12,18 @@
   width: 100%;
   height: 25vh;
   position: relative;
+  vertical-align: baseline;
   @media (min-width: 460px) {
-    //flex-direction: row;
+    flex-direction: row;
   }
 
   p {
     line-height: 1.2;
     text-align: center;
+
     color: $textWhite;
     font-family: $fontHeader;
-    font-size: 35px;
+    font-size: 2rem;
     position: absolute;
     top: 30%;
     right: 50%;
