--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -2,16 +2,25 @@
 
 .main {
   position: relative;
-
+  width: 100%;
+  color: aliceblue !important;
   @media (min-width: 760px) {
     margin: 0 auto;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: baseline;
+    align-self: center;
+  }
+  @media (min-width: 2000px) {
     width: 70%;
   }
-  > div {
-    height: 100%;
-    width: 100%;
-  }
+  // > div {
+  //   height: 100%;
+  //   width: 100%;
+  // }
 
   :global(.slick-arrow) {
     cursor: pointer;
@@ -62,9 +71,5 @@
         width: 60px;
       }
     }
-  }
-
-  @media (min-width: 450px) {
-    width: 70%;
   }
 }
