--- a/styles/LandingPageAboutUs.module.scss
+++ b/styles/LandingPageAboutUs.module.scss
@@ -3,13 +3,13 @@
 .landingAboutUsContainer {
   display: flex;
   flex-direction: column;
-  background-size: cover;
+  background-size: 100%;
   background-image: url(../public/assets/naftee_holder-04.png);
   background-repeat: no-repeat;
   background-position: top;
   padding: 0;
-  margin: 0;
-  width: 100%;
+  // margin: 0;
+  // min-width: 100%;
   height: 25vh;
   position: relative;
   @media (min-width: 460px) {
