--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+@import 'variables';
 * {
   box-sizing: border-box;
 }
@@ -10,5 +11,11 @@ body {
     @media (min-width: 760px) {
       height: 100vh;
     }
+  }
+  h1 {
+    font-family: $fontHeader;
+  }
+  p {
+    font-family: $fontText;
   }
 }
