Loader created, footer checked

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -19,6 +19,9 @@
   }
   :global(.ant-modal-root) {
     height: 100%;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
   }
 
   :global(.ant-modal-wrap) {
