--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -6,7 +6,8 @@
   position: relative;
   overflow-x: hidden;
   background-color: $backgroundColor;
-  p {
+  p,
+  h1 {
     font-family: $fontText;
     color: $textWhite;
   }
@@ -20,7 +21,7 @@
 .layoutChildrenSection {
   min-height: calc(100vh - 14rem);
   width: 100%;
-  margin: 0;
+  margin: 3rem 0 0 0;
   h1,
   h3 {
     font-family: $fontHeader;
@@ -30,6 +31,6 @@
 
   @media (min-width: 450px) {
     min-height: calc(100vh - 10rem);
-    margin: 0 auto;
+    margin: 3rem auto 0 auto;
   }
 }
