--- a/styles/QuizForm.module.scss
+++ b/styles/QuizForm.module.scss
@@ -3,24 +3,33 @@
   text-align: center;
 }
 .form {
+  background-color: rgb(243, 222, 237);
+  color: black;
   padding: 5px;
   height: 100%;
   flex-grow: 1;
   text-align: left;
   display: flex;
   flex-direction: column;
+  h1 {
+    color: black !important;
+  }
   .radioWrapper {
     margin: 2rem;
+    h1,
+    h3,
+    p {
+      color: black;
+    }
   }
   :global(.ant-popover) {
     width: 50%;
   }
-
-  :global(.ant-radio-checked .ant-radio-inner) {
-    border-color: $borderLight;
+  :global(ant-popover-inner-content) {
+    color: black;
   }
 
-  :global(.ant-radio-inner, .ant-radio:hover) {
+  :global(.ant-radio-checked .ant-radio-inner) {
     border-color: $borderLight;
   }
 
@@ -29,21 +38,35 @@
     border: $borderLight;
     color: $textBlack;
   }
+  :global(.ant-btn.ant-btn-primary) {
+    background-color: $secondary;
+    color: $textWhite;
+  }
+  :global(.ant-radio:hover .ant-radio-inner) {
+    border-color: $secondary;
+  }
+  :global(.ant-btn.ant-btn-primary:hover) {
+    background-color: rgb(136, 129, 175);
+    color: $textWhite;
+  }
+
+  :global(.ant-radio-wrapper:hover) {
+    border-color: $secondary;
+  }
   :global(.ant-radio-inner::after) {
     background-color: $borderLight;
     border-color: $borderLight;
   }
-  :global(.ant-radio-input:focus) {
+  :global(.ant-radio-inner:hover) {
+    background-color: $borderLight;
+    border-color: $secondary;
+  }
+  :global(.ant-radio-input:hover) {
     background-color: $borderLight;
     border-color: $borderLight;
   }
-  :global(.ant-radio-wrapper:hover) {
-    border-color: $borderLight;
-  }
-  :global(.ant-radio-checked, ) {
+
+  :global(.ant-radio-checked) {
     border-color: $borderLight;
   }
 }
-// :global(.ant-radio:hover .ant-radio-input:focus, .ant-radio-inner) {
-//   border-color: $borderLight;
-// }
