--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,7 @@ body {
       height: 100vh;
     }
   }
+
   h1 {
     font-family: $fontHeader;
   }
@@ -21,5 +22,8 @@ body {
     @media (min-width: 760px) {
       height: 100vh;
     }
+  }
+  :global(.snipcart-modal__container) {
+    margin-top: 3rem;
   }
 }
