--- a/styles/LandingPageAboutUs.module.scss
+++ b/styles/LandingPageAboutUs.module.scss
@@ -13,8 +13,7 @@
   height: 25vh;
   position: relative;
 
-  vertical-align: baseline;
-
+  // vertical-align: baseline;
   @media (min-width: 460px) {
     flex-direction: row;
   }
