--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,3 +6,4 @@ $fontHeader: 'Rubik', sans-serif;
 $fontText: 'Montserrat', sans-serif;
 $backgroundColor: rgb(79, 71, 122);
 $borderLight: #d2cfe2;
+$headlineFontSize: 70px bold;
