--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -39,6 +39,7 @@
       display: flex;
       justify-content: center;
     }
+
     @media (min-width: 760px) {
       display: none;
     }
@@ -49,7 +50,7 @@
     align-items: center;
     color: white;
     height: 100%;
-
+    position: relative;
     div {
       display: flex;
       align-items: center;
@@ -71,5 +72,21 @@
     @media (min-width: 760px) {
       display: none;
     }
+  }
+  .itemsCount {
+    position: absolute;
+    background-color: #ff38b3;
+    overflow: hidden;
+    height: 22px;
+    width: 22px;
+    line-height: 22px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 12px;
+
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    color: white;
   }
 }
