--- a/styles/ProductDetail.module.scss
+++ b/styles/ProductDetail.module.scss
@@ -20,14 +20,20 @@
     font-weight: 900;
     font-size: xx-large;
   }
-  .snipcartAddItem {
-    button {
-      margin-top: 15px;
-      border: 1px solid $secondary;
-      &:hover {
-        background-color: $secondary;
-        color: $textWhite;
-      }
-    }
+  :global(.snipcart-add-item) {
+    background-color: $borderLight;
+    border: $borderLight;
+    color: $textBlack;
+    width: 7rem;
+    font-family: $fontText;
+    padding: 4px;
+    margin: 15px;
+  }
+  :global(.snipcart-add-item:hover) {
+    background-color: rgb(136, 129, 175);
+    color: $textWhite;
+    font-family: $fontText;
+    padding: 4px;
+    margin: 15px;
   }
 }
