--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -50,13 +50,14 @@
     align-items: center;
     color: white;
     height: 100%;
-    position: relative;
+    // position: relative;
     div {
       display: flex;
       align-items: center;
       svg {
         width: 1rem;
         height: 1rem;
+        z-index: 2;
       }
     }
   }
@@ -73,20 +74,21 @@
       display: none;
     }
   }
+
   .itemsCount {
-    position: absolute;
+    position: relative;
     background-color: #ff38b3;
     overflow: hidden;
-    height: 22px;
-    width: 22px;
-    line-height: 22px;
+    height: 1rem;
+    width: 1rem;
+    line-height: 1rem;
     border-radius: 50%;
     text-align: center;
     font-size: 12px;
 
-    bottom: 0;
-    right: 0;
-    z-index: 2;
+    bottom: 6px;
+    right: 6px;
+    z-index: -2;
     color: white;
   }
 }
