--- a/styles/Loader.module.scss
+++ b/styles/Loader.module.scss
@@ -35,7 +35,7 @@
 .coffee_cup {
   width: 20px;
   height: 24px;
-  border: 1px $primary solid;
+  border: 1.5px $textWhite solid;
   border-radius: 0px 0px 5px 5px;
   position: relative;
   margin: 36px auto;
@@ -47,7 +47,7 @@
   &:after {
     width: 5px;
     height: 12px;
-    border: 1px $primary solid;
+    border: 1.5px $textWhite solid;
     border-left: none;
     border-radius: 0px 20px 20px 0px;
     left: 20px;
@@ -55,11 +55,11 @@
   &:before {
     width: 1px;
     height: 6px;
-    background-color: $primary;
+    background-color: $textWhite;
     top: -10px;
     left: 4px;
-    box-shadow: 5px 0px 0px 0px $primary, 5px -5px 0px 0px $primary,
-      10px 0px 0px 0px $primary;
+    box-shadow: 5px 0px 0px 0px $textWhite, 5px -5px 0px 0px $textWhite,
+      10px 0px 0px 0px $textWhite;
     animation: steam 1s linear infinite alternate;
   }
 }
