--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -1,4 +1,7 @@
 .contactContainer {
+  display: flex;
+  flex-direction: column;
+
   h1 {
     text-align: center;
     font-size: xx-large;
@@ -11,4 +14,11 @@
     width: 70%;
     margin: 0 auto;
   }
+  // .contactcallToAction {
+  //   font-size: 30px bold;
+  // }
+
+  // :global(.contactcallToAction) {
+  //   font-size: 79px bold;
+  // }
 }
