--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -43,6 +43,8 @@
     }
   }
   @media (min-width: 1500px) {
+    width: 70%;
+    margin: 0 auto;
     img {
       width: 30vw;
       margin: 0 auto;
@@ -57,6 +59,8 @@
     }
   }
   @media (min-width: 2500px) {
+    width: 70%;
+    margin: 0 auto;
     img {
       width: 20vw;
       margin: 0 auto;
