--- a/styles/Terms.module.scss
+++ b/styles/Terms.module.scss
@@ -5,20 +5,33 @@
     width: 70%;
     margin: 0 auto;
   }
-}
+  .list {
+    margin-top: 3rem;
+    padding-left: 0;
+    border-top: 0.01px solid $borderLight;
+    border-bottom: 0.01px solid $borderLight;
+    font-size: 0.6rem;
+    @media (min-width: 760px) {
+      font-size: 0.75rem;
+    }
+    @media (min-width: 1500px) {
+      width: 70%;
+      font-size: 1rem;
+    }
+    li {
+      list-style: none;
 
-.list {
-  padding-left: 0;
-  border-top: 0.01px solid $borderLight;
-  border-bottom: 0.01px solid $borderLight;
+      p {
+        text-align: left;
+        padding: 5px 15px;
 
-  li {
-    list-style: none;
-    p {
-      ul {
-        padding: 0;
+        @media (min-width: 1500px) {
+          padding: 0.25rem 1.5rem;
+        }
+        @media (min-width: 2500px) {
+          padding: 0.5rem 3rem;
+        }
       }
-      padding: 5px;
     }
   }
 }
